--- a/assets/css/cabecera.css
+++ b/assets/css/cabecera.css
@@ -1,4 +1,4 @@
-.cabecera
+.cabecera 
 {
     align-items: center;
     background: #f9f9f9;
@@ -6,4 +6,23 @@
     justify-content: space-between;
     padding-left: 2rem;
     padding-right: 2rem;
+}
+
+@media screen and (min-width:0) 
+{
+    .cabecera 
+    {
+        padding: 0 1rem;
+        justify-content: center;
+    }
+
+}
+
+@media screen and (min-width:768px)
+{
+    .cabecera
+    {
+        padding: 0 5rem;
+        justify-content: space-between;
+    }
 }
